Correct spacing for the numbers in the row view.

--- a/scss/row.scss
+++ b/scss/row.scss
@@ -51,6 +51,15 @@
       border-bottom-right-radius: 4px;
     }
 
+    .spacing {
+      .numeric {
+        padding: 0 0.3rem;
+      }
+      .meta {
+        padding: 0 0.3rem;
+      }
+    }
+
   }
 
   .row:hover {
